# Blurcur

./: CMakeLists.txt  config.ini  main.cpp
